--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "bcrypt": "^5.1.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-handlebars": "^6.0.7",
+    "express-session": "^1.17.3",
     "express-sessions": "^1.0.6",
     "handlebars": "^4.7.7",
     "mysql2": "^3.0.1",
