--- a/.gitignore
+++ b/.gitignore
@@ -73,6 +73,8 @@ typings/
 # dotenv environment variables file
 .env
 .env.test
+# temp file to hold gmail info while package usages is figured out for this project
+.send-email.js
 
 # parcel-bundler cache (https://parceljs.org/)
 .cache
