--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "express-handlebars": "^6.0.7",
     "express-session": "^1.17.3",
     "express-sessions": "^1.0.6",
+    "gmail-send": "^1.8.14",
     "handlebars": "^4.7.7",
     "mysql2": "^3.0.1",
     "sequelize": "^6.28.0"
