Added missing gmail-send npm package dependencies

--- a/package.json
+++ b/package.json
@@ -34,7 +34,9 @@
     "express-sessions": "^1.0.6",
     "gmail-send": "^1.8.14",
     "handlebars": "^4.7.7",
+    "lodash": "^4.17.21",
     "mysql2": "^3.0.1",
+    "nodemailer": "^6.9.1",
     "sequelize": "^6.28.0"
   }
 }
